@@ -1,61 +1,58 @@
 package com.bot.sup.service.callbackquery.impl;
 
 import com.bot.sup.model.common.ActivityEnum;
+import com.bot.sup.repository.InstructorRepository;
 import com.bot.sup.service.callbackquery.Callback;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
-import static com.bot.sup.model.common.ActivityEnum.INSTRUCTORS;
+import static com.bot.sup.model.common.ActivityEnum.DELETE_INSTRUCTOR;
 
 @RequiredArgsConstructor
 @Service
-public class CallbackInstructorsImpl implements Callback {
-    public static final Set<ActivityEnum> ACTIVITIES = Set.of(INSTRUCTORS);
+public class CallbackDeleteInstructorImpl implements Callback {
+    public static final Set<ActivityEnum> ACTIVITIES = Set.of(DELETE_INSTRUCTOR);
+    private final InstructorRepository instructorRepository;
 
+    @Transactional
     @Override
     public BotApiMethod<?> getCallbackQuery(CallbackQuery callbackQuery) {
         Long chatId = callbackQuery.getMessage().getChatId();
+        String instructorId = callbackQuery.getData().split("/")[1];
+        deleteInstructor(Long.parseLong(instructorId));
 
-        return EditMessageText.builder()
-                .messageId(callbackQuery.getMessage().getMessageId())
+        return EditMessageText.builder().messageId(callbackQuery.getMessage().getMessageId())
+                .text("Инструктор удален.\nВернитесь списку инструкторов.")
                 .chatId(chatId)
-                .text("Меню -> Инструкторы")
-                .replyMarkup(setUpKeyboard())
+                .replyMarkup(createKeyboardForDeleteInstructor())
                 .build();
     }
 
-    private InlineKeyboardMarkup setUpKeyboard() {
-        List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
 
-        buttons.add(List.of(
+    private InlineKeyboardMarkup createKeyboardForDeleteInstructor() {
+        List<List<InlineKeyboardButton>> buttons = new ArrayList<>();
+        buttons.add(Collections.singletonList(
                 InlineKeyboardButton.builder()
-                        .text("\uD83D\uDCDDСписок инструкторов")
+                        .text("⬅️Назад")
                         .callbackData("LIST_INSTRUCTORS")
-                        .build()));
-        buttons.add(List.of(
-                InlineKeyboardButton.builder()
-                        .text("\uD83C\uDD95Добавить инструктора")
-                        .callbackData("ADD_INSTRUCTOR")
-                        .build()));
-        buttons.add(List.of(
-                InlineKeyboardButton.builder()
-                        .text("↖️Меню↖️")
-                        .callbackData("MENU")
                         .build()));
 
         return InlineKeyboardMarkup.builder()
                 .keyboard(buttons)
                 .build();
+    }
+
+    @Transactional
+    public void deleteInstructor(Long instructorId) {
+        instructorRepository.deleteByTgId(instructorId);
     }
 
     @Override
